Project-wide curation of user docs